@startuml online_shopping
skinparam linetype ortho
skinparam classAttributeIconSize 0

' =========================
' Data Types
' =========================

class Address <<dataType>> {
    - street_address: StreetAddress
    - city: City
    - state: State
    - zipcode: ZipCode
    - country: Country
}

class Username <<dataType>>
class Password <<dataType>>
class Name <<dataType>>
class Email <<dataType>>
class Phone <<dataType>>

class StreetAddress <<dataType>>
class City <<dataType>>
class State <<dataType>>
class ZipCode <<dataType>>
class Country <<dataType>>

class CardNumber <<dataType>>
class Code <<dataType>>
class BillingAddress <<dataType>>

class BankName <<dataType>>
class RoutingNumber <<dataType>>
class AccountNumber <<dataType>>

class OrderNumber <<dataType>>
class OrderDate <<dataType>>
class CreationDate <<dataType>>

class ShipmentDate <<dataType>>
class EstimatedArrival <<dataType>>
class ShipmentMethod <<dataType>>

class Amount <<dataType>>
class Price <<dataType>>
class Quantity <<dataType>>
class Rating <<dataType>>

class ProductName <<dataType>>
class ProductDescription <<dataType>>
class ProductCount <<dataType>>
class CategoryName <<dataType>>
class CategoryDescription <<dataType>>

class ReviewContent <<dataType>>
class NotificationId <<dataType>>
class NotificationContent <<dataType>>

' =========================
' Enumerations
' =========================

enum OrderStatus {
    Unshipped
    Pending
    Shipped
    Complete
    Canceled
    RefundApplied
}

enum AccountStatus {
    Active
    Blocked
    Banned
    Compromised
    Archived
    Unknown
}

enum ShipmentStatus {
    Pending
    Shipped
    Delivered
    OnHold
}

enum PaymentStatus {
    Unpaid
    Pending
    Completed
    Failed
    Declined
    Canceled
    Abandoned
    Settling
    Settled
    Refunded
}

' =========================
' Account
' =========================

class Account {
    - user_name: Username
    - password: Password
    - status: AccountStatus
    - name: Name
    - shipping_address: Address
    - email: Email
    - phone: Phone

    + get_shipping_address(): Address
    + add_product_review(): bool
    + add_product(): bool
}

class Member {
    + place_order(): bool
}

class Admin {
    + block_user(): bool
    + add_new_product_category(): bool
    + modify_product_category(): bool
}

class Customer {
    + get_shopping_cart(): ShoppingCart
}

class Guest {
    + register_account(): bool
}

' =========================
' Payment Method
' =========================

class CreditCard {
    - name_on_card: Name
    - card_number: CardNumber
    - code: Code
    - billing_address: BillingAddress
}

class ElectronicBankTransfer {
    - bank_name: BankName
    - routing_number: RoutingNumber
    - account_number: AccountNumber
}

class Payment {
    - status: PaymentStatus
    - amount: Amount

    + process_payment(): PaymentStatus
}

class CreditCardTransaction {
}

class ElectronicBankTransaction {
}

' =========================
' Search / Catalog
' =========================

interface Search {
    + search_products_by_name(name: ProductName): list<Product>
    + search_products_by_category(category: CategoryName): list<Product>
}

class Catalog {
    - last_updated: CreationDate
    - product_names: ProductNameMap
    - product_categories: ProductCategoryMap
    - name: Name
}

class ProductNameMap <<dataType>>
class ProductCategoryMap <<dataType>>

' =========================
' Shopping Cart / Item / Product
' =========================

class ShoppingCart {
    - items: ItemList

    + add_item(): bool
    + remove_item(): bool
    + get_items(): ItemList
}

class ItemList <<dataType>>

class Item {
    - quantity: Quantity
    - price: Price

    + update_quantity(): bool
}

class Product {
    - name: ProductName
    - description: ProductDescription
    - price: Price
    - available_item_count: ProductCount
    - category: ProductCategory

    + get_available_count(): ProductCount
}

class ProductCategory {
    - name: CategoryName
    - description: CategoryDescription
}

class ProductReview {
    - rating: Rating
    - review: ReviewContent

    + get_rating(): Rating
}

' =========================
' Order / Shipment
' =========================

class Order {
    - order_number: OrderNumber
    - status: OrderStatus
    - order_date: OrderDate

    + send_for_shipment(): bool
}

class OrderLog {
    - creation_date: CreationDate
    - status: OrderStatus
}

class Shipment {
    - shipment_date: ShipmentDate
    - estimated_arrival: EstimatedArrival
    - shipment_method: ShipmentMethod

    + add_shipment_log(): bool
}

class ShipmentLog {
    - status: ShipmentStatus
    - creation_date: CreationDate
}

' =========================
' Notification
' =========================

class Notification {
    - notification_id: NotificationId
    - created_on: CreationDate
    - content: NotificationContent

    + send_notification(): bool
}

class SMSNotification {
    - phone: Phone
}

class EmailNotification {
    - email: Email
}

' =========================
' Inheritance / Extends
' =========================

Customer <|-- Member : Extends
Customer <|-- Guest : Extends

Payment <|-- CreditCardTransaction : Extends
Payment <|-- ElectronicBankTransaction : Extends

Notification <|-- SMSNotification : Extends
Notification <|-- EmailNotification : Extends

Catalog ..|> Search
Customer ..> Search : <<uses>>

' =========================
' Composition / Aggregation
' =========================

Account -right-* Member
Account -right-* Admin

CreditCard -left-* Account
ElectronicBankTransfer -left-* Account

Customer "1" *-- "1" ShoppingCart
Customer "1" *-- "*" Order

ShoppingCart "1" *-- "*" Item
Order "1" *-- "*" Item

Order "1" *-- "1..*" OrderLog
Order "1" *-- "1..*" Shipment : of an

Shipment "1" *-- "1..*" ShipmentLog

Catalog "1" o-- "*" Product

' =========================
' Associations
' =========================

Item "*" --> "1" Product

Product "*" --> "1" ProductCategory : belongs to
ProductReview "*" --> "1" Product : about a

Order "1" -- "1" Payment

CreditCardTransaction --> CreditCard : using
ElectronicBankTransaction --> ElectronicBankTransfer : using

OrderLog "0..1" -- "*" Notification
ShipmentLog "0..1" -- "*" Notification

Admin --> ProductCategory : Add or modify
Admin --> Product : Add or modify

' =========================
' Hidden Layout Helpers
' =========================

Address -[hidden]right- OrderStatus
OrderStatus -[hidden]right- AccountStatus
AccountStatus -[hidden]right- ShipmentStatus
ShipmentStatus -[hidden]right- PaymentStatus

Account -[hidden]right- CreditCard
CreditCard -[hidden]right- ElectronicBankTransfer

Guest -[hidden]down- Search
Search -[hidden]down- Catalog

Customer -[hidden]down- ShoppingCart
ShoppingCart -[hidden]right- Item
Item -[hidden]right- Order

Order -[hidden]down- Shipment
Shipment -[hidden]right- ShipmentLog

SMSNotification -[hidden]down- EmailNotification

@enduml
